Add GenAI logo showcase section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,43 @@
     <section id="tools" class="py-16">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">GenAI + Open Source</h2>
+        <!-- Блок логотипов инструментов: сетка с официальными изображениями -->
+        <section id="logos" class="mt-8">
+          <div class="logos-grid">
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Perplexity_AI_logo.svg" alt="Логотип Perplexity" loading="lazy" />
+              <figcaption>Perplexity</figcaption>
+            </figure>
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Qwen_logo.svg" alt="Логотип Qwen AI" loading="lazy" />
+              <figcaption>Qwen AI</figcaption>
+            </figure>
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Logo_Blender.svg" alt="Логотип Blender" loading="lazy" />
+              <figcaption>Blender</figcaption>
+            </figure>
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/FreeCAD-logo.svg" alt="Логотип FreeCAD" loading="lazy" />
+              <figcaption>FreeCAD</figcaption>
+            </figure>
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Openscad.svg" alt="Логотип OpenSCAD" loading="lazy" />
+              <figcaption>OpenSCAD</figcaption>
+            </figure>
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Hf-logo-with-title.svg" alt="Логотип Hugging Face" loading="lazy" />
+              <figcaption>Hugging Face</figcaption>
+            </figure>
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Logo_TFLEX_CAD.png" alt="Логотип T-FLEX CAD" loading="lazy" />
+              <figcaption>T‑FLEX CAD</figcaption>
+            </figure>
+            <figure class="logo-card">
+              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/NotebookLM_logo.svg" alt="Логотип NotebookLM" loading="lazy" />
+              <figcaption>NotebookLM</figcaption>
+            </figure>
+          </div>
+        </section>
         <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
           <a href="https://www.perplexity.ai/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
             <div class="flex items-center gap-3">
