--- a/index.html
+++ b/index.html
@@ -248,102 +248,156 @@
     </section>
 
     <!-- Рекомендованные инструменты (кликабельные карточки) -->
-    <section id="tools" class="py-16">
-      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">GenAI + Open Source</h2>
-        <!-- Блок логотипов инструментов: сетка с официальными изображениями -->
-        <section id="logos" class="mt-8">
-          <div class="logos-grid">
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Perplexity_AI_logo.svg" alt="Логотип Perplexity" loading="lazy" />
-              <figcaption>Perplexity</figcaption>
-            </figure>
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Qwen_logo.svg" alt="Логотип Qwen AI" loading="lazy" />
-              <figcaption>Qwen AI</figcaption>
-            </figure>
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Logo_Blender.svg" alt="Логотип Blender" loading="lazy" />
-              <figcaption>Blender</figcaption>
-            </figure>
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/FreeCAD-logo.svg" alt="Логотип FreeCAD" loading="lazy" />
-              <figcaption>FreeCAD</figcaption>
-            </figure>
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Openscad.svg" alt="Логотип OpenSCAD" loading="lazy" />
-              <figcaption>OpenSCAD</figcaption>
-            </figure>
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Hf-logo-with-title.svg" alt="Логотип Hugging Face" loading="lazy" />
-              <figcaption>Hugging Face</figcaption>
-            </figure>
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Logo_TFLEX_CAD.png" alt="Логотип T-FLEX CAD" loading="lazy" />
-              <figcaption>T‑FLEX CAD</figcaption>
-            </figure>
-            <figure class="logo-card">
-              <img src="https://commons.wikimedia.org/wiki/Special:FilePath/NotebookLM_logo.svg" alt="Логотип NotebookLM" loading="lazy" />
-              <figcaption>NotebookLM</figcaption>
-            </figure>
+    <section id="tools" class="relative overflow-hidden py-20">
+      <div aria-hidden class="pointer-events-none absolute inset-0 -z-10 bg-gradient-to-b from-white via-slate-50/60 to-white">
+        <div class="absolute -top-40 right-10 h-72 w-72 rounded-full bg-indigo-200/40 blur-3xl"></div>
+        <div class="absolute bottom-0 left-10 h-64 w-64 rounded-full bg-sky-200/40 blur-3xl"></div>
+      </div>
+      <div class="relative mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <div class="flex flex-col gap-12 lg:flex-row lg:items-start">
+          <div class="max-w-2xl">
+            <span class="tools-badge">Экосистема инструментов</span>
+            <h2 class="mt-4 text-3xl sm:text-4xl font-bold tracking-tight">
+              GenAI <span class="text-slate-400">+</span>
+              <span class="tools-gradient-text">Open Source</span>
+            </h2>
+            <p class="mt-4 text-lg text-slate-600">
+              Подборка сервисов, с которыми команда Step3D.Lab решает задачи исследования, моделирования и презентации.
+              Мы комбинируем генеративный ИИ и открытые CAD‑инструменты, чтобы ускорять цикл «идея → прототип → внедрение».
+            </p>
+            <div class="mt-6 flex flex-wrap gap-2 text-sm">
+              <span class="tools-chip">Research &amp; analytics</span>
+              <span class="tools-chip">3D modeling</span>
+              <span class="tools-chip">Collaboration</span>
+              <span class="tools-chip">Documentation</span>
+            </div>
           </div>
-        </section>
-        <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
-          <a href="https://www.perplexity.ai/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/perplexity-ai.svg" alt="Perplexity AI логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">Perplexity AI</div>
+          <div id="logos" class="w-full lg:max-w-md">
+            <p class="text-xs font-semibold uppercase tracking-[0.2em] text-slate-500">Используем в проектах</p>
+            <div class="logo-cloud">
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Perplexity_AI_logo.svg" alt="Логотип Perplexity" loading="lazy" />
+                <span>Perplexity</span>
+              </div>
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Qwen_logo.svg" alt="Логотип Qwen AI" loading="lazy" />
+                <span>Qwen</span>
+              </div>
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Logo_Blender.svg" alt="Логотип Blender" loading="lazy" />
+                <span>Blender</span>
+              </div>
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/FreeCAD-logo.svg" alt="Логотип FreeCAD" loading="lazy" />
+                <span>FreeCAD</span>
+              </div>
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Openscad.svg" alt="Логотип OpenSCAD" loading="lazy" />
+                <span>OpenSCAD</span>
+              </div>
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Hf-logo-with-title.svg" alt="Логотип Hugging Face" loading="lazy" />
+                <span>Hugging Face</span>
+              </div>
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Logo_TFLEX_CAD.png" alt="Логотип T-FLEX CAD" loading="lazy" />
+                <span>T‑FLEX CAD</span>
+              </div>
+              <div class="logo-pill">
+                <img src="https://commons.wikimedia.org/wiki/Special:FilePath/NotebookLM_logo.svg" alt="Логотип NotebookLM" loading="lazy" />
+                <span>NotebookLM</span>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">AI‑поиск и аналитика для исследований и брифов.</div>
+          </div>
+        </div>
+        <div class="mt-14 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+          <a href="https://www.perplexity.ai/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/perplexity-ai.svg" alt="Perplexity AI логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">Perplexity AI</div>
+                <div class="tools-card__tag">Research &amp; briefs</div>
+              </div>
+            </div>
+            <p class="tools-card__description">AI‑поиск и аналитика для быстрых исследований, синтеза инсайтов и подготовки брифов.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
-          <a href="https://qwenlm.ai/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/qwen-ai.svg" alt="Qwen AI логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">Qwen AI</div>
+          <a href="https://qwenlm.ai/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/qwen-ai.svg" alt="Qwen AI логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">Qwen AI</div>
+                <div class="tools-card__tag">Multimodal studio</div>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">Мультимодальные модели Alibaba для генерации контента и кода.</div>
+            <p class="tools-card__description">Мультимодальные модели Alibaba для генерации текстов, кода и ассетов под задачи проекта.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
-          <a href="https://www.blender.org/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/blender.svg" alt="Blender логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">Blender</div>
+          <a href="https://www.blender.org/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/blender.svg" alt="Blender логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">Blender</div>
+                <div class="tools-card__tag">3D creation suite</div>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">Открытый пакет для 3D‑моделирования, анимации и рендера.</div>
+            <p class="tools-card__description">Открытый пакет для 3D‑моделирования, анимации и рендера с огромной экосистемой аддонов.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
-          <a href="https://www.freecad.org/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/freecad.svg" alt="FreeCAD логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">FreeCAD</div>
+          <a href="https://www.freecad.org/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/freecad.svg" alt="FreeCAD логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">FreeCAD</div>
+                <div class="tools-card__tag">Parametric CAD</div>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">Параметрический CAD‑пакет с открытым исходным кодом.</div>
+            <p class="tools-card__description">Параметрический CAD с открытым исходным кодом: библиотека workbench и инженерные плагины.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
-          <a href="https://openscad.org/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/openscad.svg" alt="OpenSCAD логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">OpenSCAD</div>
+          <a href="https://openscad.org/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/openscad.svg" alt="OpenSCAD логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">OpenSCAD</div>
+                <div class="tools-card__tag">Code-based CAD</div>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">Скриптовый CAD для точных параметрических моделей.</div>
+            <p class="tools-card__description">Скриптовый CAD для точных параметрических моделей и библиотек компонентов.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
-          <a href="https://huggingface.co/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/hugging-face.svg" alt="Hugging Face логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">Hugging Face</div>
+          <a href="https://huggingface.co/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/hugging-face.svg" alt="Hugging Face логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">Hugging Face</div>
+                <div class="tools-card__tag">Model hub</div>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">Маркетплейс моделей ИИ и инструменты для экспериментов.</div>
+            <p class="tools-card__description">Маркетплейс моделей ИИ и наборы инструментов для экспериментов, обучения и продакшена.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
-          <a href="https://www.tflex.com/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/t-flex-cad.svg" alt="T‑FLEX CAD логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">T‑FLEX CAD</div>
+          <a href="https://www.tflex.com/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/t-flex-cad.svg" alt="T‑FLEX CAD логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">T‑FLEX CAD</div>
+                <div class="tools-card__tag">Production ready</div>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">Профессиональный параметрический CAD российского производства.</div>
+            <p class="tools-card__description">Профессиональный параметрический CAD российского производства с PLM‑экосистемой.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
-          <a href="https://notebooklm.google/" target="_blank" rel="noopener" class="group rounded-3xl border border-slate-200 bg-white p-5 shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <div class="flex items-center gap-3">
-              <img src="assets/logos/svg/notebooklm.svg" alt="NotebookLM логотип" loading="lazy" class="h-10 w-10 flex-shrink-0 rounded-xl border border-slate-200 bg-white p-1" />
-              <div class="text-lg font-semibold group-hover:text-indigo-700">NotebookLM</div>
+          <a href="https://notebooklm.google/" target="_blank" rel="noopener" class="tools-card group focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500">
+            <div class="tools-card__header">
+              <div class="tools-card__logo"><img src="assets/logos/svg/notebooklm.svg" alt="NotebookLM логотип" loading="lazy" /></div>
+              <div>
+                <div class="tools-card__title">NotebookLM</div>
+                <div class="tools-card__tag">Knowledge base</div>
+              </div>
             </div>
-            <div class="mt-3 text-slate-600 text-sm">Google‑сервис заметок и исследований на основе ваших источников.</div>
+            <p class="tools-card__description">Google‑сервис заметок и исследований на основе ваших источников с умным ассистентом.</p>
+            <span class="tools-card__cta">Открыть сервис →</span>
           </a>
         </div>
       </div>
