--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Step3D.Lab — Лаборатория промдизайна и инжиниринга</title>
+  <title>Step3D.Lab — Лаборатория промдизайна и инжиниринга технопарка РГСУ</title>
   <meta name="description" content="CAD/CAE, реверс‑инжиниринг, 3D‑сканирование и аддитивное производство. Курсы ДПО и проектные работы." />
 
   <!-- Tailwind (через CDN: без сборки) -->
