--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16 sm:py-24">
         <h1 class="reveal text-4xl sm:text-5xl lg:text-6xl font-extrabold tracking-tight leading-tight">
           Лаборатория промдизайна
-          <span class="block bg-gradient-to-r from-indigo-600 via-sky-600 to-teal-500 bg-clip-text text-transparent">и инжиниринга</span>
+          <span class="block bg-gradient-to-r from-indigo-600 via-sky-600 to-teal-500 bg-clip-text text-transparent">и инжиниринга технопарка РГСУ</span>
         </h1>
         <p class="mt-4 max-w-3xl text-lg text-slate-600">
           CAD/CAE, реверсивный инжиниринг, 3D‑сканирование и аддитивное производство. Учим и делаем продукты на базе технопарка РГСУ совместно с ООО «СТЕП 3Д».
