--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <span class="block bg-gradient-to-r from-indigo-600 via-sky-600 to-teal-500 bg-clip-text text-transparent">и инжиниринга технопарка РГСУ</span>
         </h1>
         <p class="mt-4 max-w-3xl text-lg text-slate-600">
-          CAD/CAE, реверсивный инжиниринг, 3D‑сканирование и аддитивное производство. Учим и делаем продукты на базе технопарка Российского государственного социального университета совместно с индустриальным партнером технопарка Step3D - сервисом тиражирования и единного производства 3D-услуг.
+          Учим и делаем продукты на базе технопарка Российского государственного социального университета совместно с индустриальным партнером технопарка Step3D - сервисом тиражирования и единного производства 3D-услуг.
         </p>
         <div class="mt-8 flex flex-wrap items-center gap-3">
           <a href="#contact" class="inline-flex items-center gap-2 rounded-xl bg-slate-900 px-5 py-3 text-white hover:bg-slate-800">
