feat: redesign tools block with real logos

--- a/index.html
+++ b/index.html
@@ -241,95 +241,77 @@
           <h2>GenAI и open source инструменты</h2>
           <p>Работаем с открытым ПО и ИИ‑помощниками — от генерации идей до построения цифровых двойников.</p>
         </div>
-        <div class="logo-band">
-          <figure>
-            <img src="assets/logos/svg/perplexity-ai.svg" alt="Perplexity AI логотип" loading="lazy" />
-            <figcaption>Perplexity</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logos/svg/qwen-ai.svg" alt="Qwen AI логотип" loading="lazy" />
-            <figcaption>Qwen AI</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logos/svg/blender.svg" alt="Blender логотип" loading="lazy" />
-            <figcaption>Blender</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logos/svg/freecad.svg" alt="FreeCAD логотип" loading="lazy" />
-            <figcaption>FreeCAD</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logos/svg/openscad.svg" alt="OpenSCAD логотип" loading="lazy" />
-            <figcaption>OpenSCAD</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logos/svg/hugging-face.svg" alt="Hugging Face логотип" loading="lazy" />
-            <figcaption>Hugging Face</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logos/svg/t-flex-cad.svg" alt="T-FLEX CAD логотип" loading="lazy" />
-            <figcaption>T‑FLEX CAD</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logos/svg/notebooklm.svg" alt="NotebookLM логотип" loading="lazy" />
-            <figcaption>NotebookLM</figcaption>
-          </figure>
-        </div>
-        <div class="card-grid tight">
-          <a class="card link" href="https://www.perplexity.ai/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/perplexity-ai.svg" alt="Perplexity AI" />
-            <div>
+        <div class="tool-grid">
+          <a class="tool-card" href="https://www.perplexity.ai/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/perplexity-ai.svg" alt="Perplexity AI логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>Perplexity AI</h3>
-              <p>Поиск и аналитика на основе ИИ для исследований.</p>
+              <p>ИИ‑поиск и аналитика с быстрым сбором источников и фактчекингом.</p>
             </div>
           </a>
-          <a class="card link" href="https://qwenlm.ai/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/qwen-ai.svg" alt="Qwen AI" />
-            <div>
+          <a class="tool-card" href="https://qwenlm.ai/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/qwen-ai.svg" alt="Qwen AI логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>Qwen AI</h3>
-              <p>Мультимодальные модели для генерации контента и кода.</p>
+              <p>Мультимодальные модели Alibaba Cloud для генерации текста, кода и графики.</p>
             </div>
           </a>
-          <a class="card link" href="https://www.blender.org/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/blender.svg" alt="Blender" />
-            <div>
+          <a class="tool-card" href="https://www.blender.org/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/blender.svg" alt="Blender логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>Blender</h3>
-              <p>Открытый пакет для 3D‑моделирования и визуализации.</p>
+              <p>Открытый пакет для 3D‑моделирования, анимации, рендера и композитинга.</p>
             </div>
           </a>
-          <a class="card link" href="https://www.freecad.org/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/freecad.svg" alt="FreeCAD" />
-            <div>
+          <a class="tool-card" href="https://www.freecad.org/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/freecad.svg" alt="FreeCAD логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>FreeCAD</h3>
-              <p>Параметрический CAD для инженерных задач и CAM.</p>
+              <p>Параметрический CAD для инженерных проектов, CAM‑подготовки и BIM.</p>
             </div>
           </a>
-          <a class="card link" href="https://openscad.org/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/openscad.svg" alt="OpenSCAD" />
-            <div>
+          <a class="tool-card" href="https://openscad.org/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/openscad.svg" alt="OpenSCAD логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>OpenSCAD</h3>
-              <p>Скриптовый CAD для точного параметрического моделинга.</p>
+              <p>Скриптовый CAD для точного параметрического моделинга и генераторов.</p>
             </div>
           </a>
-          <a class="card link" href="https://huggingface.co/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/hugging-face.svg" alt="Hugging Face" />
-            <div>
+          <a class="tool-card" href="https://huggingface.co/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/hugging-face.svg" alt="Hugging Face логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>Hugging Face</h3>
-              <p>Платформа моделей и инструментов машинного обучения.</p>
+              <p>Экосистема моделей, датасетов и Spaces для ML‑инженеров и исследователей.</p>
             </div>
           </a>
-          <a class="card link" href="https://www.tflex.com/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/t-flex-cad.svg" alt="T-FLEX CAD" />
-            <div>
+          <a class="tool-card" href="https://www.tflex.com/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/t-flex-cad.svg" alt="T‑FLEX CAD логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>T‑FLEX CAD</h3>
-              <p>Профессиональный российский параметрический CAD.</p>
+              <p>Российская CAD/CAM/PLM‑платформа для машиностроения и приборостроения.</p>
             </div>
           </a>
-          <a class="card link" href="https://notebooklm.google/" target="_blank" rel="noopener">
-            <img src="assets/logos/svg/notebooklm.svg" alt="NotebookLM" />
-            <div>
+          <a class="tool-card" href="https://notebooklm.google/" target="_blank" rel="noopener">
+            <figure class="tool-card__logo">
+              <img src="assets/logos/svg/notebooklm.svg" alt="NotebookLM логотип" loading="lazy" />
+            </figure>
+            <div class="tool-card__body">
               <h3>NotebookLM</h3>
-              <p>Google‑сервис заметок и исследований на базе ваших источников.</p>
+              <p>ИИ‑ассистент Google для работы с заметками, конспектами и исследованиями.</p>
             </div>
           </a>
         </div>
