Add Telegram channel links across site

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
               <span class="icon" aria-hidden="true" style="--icon-src: url('../assets/icons/custom/icon-pereiti-k-kontaktam.svg')"></span>
             </a>
             <a class="btn ghost" href="#features">О лаборатории</a>
+            <a class="btn ghost" href="https://t.me/STEP_3D_Lab" target="_blank" rel="noopener">
+              Новости в Telegram
+              <span class="icon" aria-hidden="true" style="--icon-src: url('../assets/icons/custom/icon-telegram-kanal.svg')"></span>
+            </a>
           </div>
           <ul class="hero-meta">
             <li><strong>Полный цикл</strong><span>Скан → CAD → печать → постпроцесс</span></li>
@@ -521,6 +525,10 @@
               <span class="icon" aria-hidden="true" style="--icon-src: url('../assets/icons/custom/icon-elektronnaya-pochta.svg')"></span>
               info@step3d.lab
             </li>
+            <li>
+              <span class="icon" aria-hidden="true" style="--icon-src: url('../assets/icons/custom/icon-telegram-kanal.svg')"></span>
+              <a href="https://t.me/STEP_3D_Lab" target="_blank" rel="noopener">Telegram-канал Step3D.Lab</a>
+            </li>
           </ul>
         </div>
         <form class="card contact-form" onsubmit="event.preventDefault(); alert('Спасибо! Заявка отправлена (демо).');">
@@ -583,6 +591,7 @@
       </div>
       <div class="footer-meta">
         <p>© <span id="year"></span> Step3D.Lab.</p>
+        <p><a href="https://t.me/STEP_3D_Lab" target="_blank" rel="noopener">Новости и проекты в Telegram</a></p>
         <p class="muted">Конфиденциальность · Условия · Файлы cookie</p>
       </div>
     </div>
