Add animated MedTech icon

--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
         </div>
         <div class="feature-grid small">
           <article class="card">
-            <span class="icon-badge">
-              <span class="icon" aria-hidden="true" style="--icon-src: url('../assets/icons/custom/icon-medtech.svg')"></span>
+            <span class="icon-badge" data-animated>
+              <img src="assets/icons/custom/icon-3d-printer-rebra.svg" alt="" role="presentation" loading="lazy" />
             </span>
             <h3>MedTech</h3>
             <p>Совместные пилоты с клиниками: индивидуальные ортезы и прототипы.</p>
