Replace header and footer logo with Step3D image

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
   <header class="site-header" id="top">
     <div class="container header-bar">
       <a class="brand" href="#top">
-        <span class="brand-icon">
-          <span class="icon" aria-hidden="true" style="--icon-src: url('../assets/icons/custom/icon-step3d-lab.svg')"></span>
-        </span>
-        <span class="brand-name">Step3D.Lab</span>
+        <img class="brand-logo" src="images/Logo_Step_3D.jpg" alt="Step3D.Lab" />
       </a>
       <nav class="desktop-nav" aria-label="Основные ссылки">
         <a href="#features">Возможности</a>
@@ -550,10 +547,7 @@
     <div class="container footer-grid">
       <div>
         <a class="brand" href="#top">
-          <span class="brand-icon">
-            <span class="icon" aria-hidden="true" style="--icon-src: url('../assets/icons/custom/icon-step3d-lab.svg')"></span>
-          </span>
-          <span class="brand-name">Step3D.Lab</span>
+          <img class="brand-logo" src="images/Logo_Step_3D.jpg" alt="Step3D.Lab" />
         </a>
         <p>Лаборатория промдизайна и инжиниринга. Технопарк РГСУ.</p>
       </div>
