Refine icon styling and refresh animated logos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="site-header" id="top">
     <div class="container header-bar">
       <a class="brand" href="#top">
-        <img class="brand-logo" src="images/Logo_Step_3D.jpg" alt="Step3D.Lab" />
+        <img class="brand-logo" src="assets/logos/svg/step3d-lab.svg" alt="Step3D.Lab" />
       </a>
       <nav class="desktop-nav" aria-label="Основные ссылки">
         <a href="#features">Возможности</a>
@@ -655,7 +655,7 @@
     <div class="container footer-grid">
       <div>
         <a class="brand" href="#top">
-          <img class="brand-logo" src="images/Logo_Step_3D.jpg" alt="Step3D.Lab" />
+          <img class="brand-logo" src="assets/logos/svg/step3d-lab.svg" alt="Step3D.Lab" />
         </a>
         <p>Лаборатория промдизайна и инжиниринга. Технопарк РГСУ.</p>
       </div>
